--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,19 @@
 {
   "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "jsx": "preserve",
+    "target": "esnext",
+    "module": "esnext",
     "lib": ["dom", "esnext"],
-    "rootDir": "./",
     "baseUrl": "./",
     "paths": {
-      "@util-types": ["types/utils.d.ts"],
-      "@graphql-types": ["types/graphql-types.d.ts"],
-      "@external-graphql-types": ["types/external-graphql-types.d.ts"],
-      "@entities/*": ["src/_entities/*"],
-      "@usecases/*": ["src/_usecases/*"],
-      "@gateways/*": ["src/_gateways/*"],
-      "@presenters/*": ["src/_presenters/*"],
-      "@utils/*": ["src/utils/*"],
-      "@components/*": ["src/components/*"],
-      "@mdx": ["src/components/_mdx"],
-      "@styles/*": ["src/global-styles/*"],
+      "~/*": ["src/*"],
+      "types": ["types"],
+      "@graphql-types": ["./types/graphql-types.d.ts"],
       "@static/*": ["static/*"]
     },
-    "module": "esnext",
+    "esModuleInterop": true,
+    "jsx": "preserve",
     "moduleResolution": "node",
-    "target": "esnext",
     "allowJs": true,
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
