--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@mdx-js/react": "^1.6.22",
     "@tsconfig/node14": "^1.0.0",
     "@types/mdx-js__react": "^1.5.3",
+    "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.31",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
@@ -63,44 +64,44 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-share": "^3.0.3",
     "@types/swiper": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "animate.css": "^4.1.1",
     "autoprefixer": "^9",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
     "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.22.0",
-    "gatsby": "^2.32.8",
-    "gatsby-image": "^2.11.0",
+    "fibers": "^5.0.0",
+    "gatsby": "^3.0.2",
+    "gatsby-image": "^3.0.0",
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-mdx": "^1.10.1",
-    "gatsby-plugin-netlify": "^2.11.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-mdx": "^2.0.0",
+    "gatsby-plugin-netlify": "^3.0.0",
     "gatsby-plugin-next-seo": "^1.7.0",
-    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-preact": "^5.0.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.2.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-typescript": "^2.12.1",
+    "gatsby-plugin-sass": "^4.0.1",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-typescript": "^3.0.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.11.0",
-    "gatsby-remark-copy-linked-files": "^2.10.0",
-    "gatsby-remark-images": "^3.11.1",
-    "gatsby-remark-smartypants": "^2.10.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "gatsby-transformer-typescript-css-modules": "^1.0.14",
+    "gatsby-remark-autolink-headers": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-smartypants": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "http-server": "^0.12.3",
     "husky": "^4",
     "jest": "^26.6.3",
@@ -115,9 +116,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-helmet-async": "^1.0.7",
+    "react-helmet-async": "^1.0.9",
     "react-live": "^2.2.3",
-    "react-share": "^4.3.1",
+    "react-share": "^4.4.0",
     "rss-parser": "^3.12.0",
     "sass": "^1.32.8",
     "stylelint": "^13.11.0",
@@ -127,12 +128,12 @@
     "stylelint-scss": "^3.19.0",
     "subscriptions-transport-ws": "^0.9.18",
     "swiper": "^6.4.15",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "4.1",
+    "typescript": "4.2.2",
     "websocket": "^1.0.33"
   }
 }
