--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     }
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "ramda": "^0.27.1"
