--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "gatsby": "^3.0.2",
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-image": "^1.0.0",
