--- a/package.json
+++ b/package.json
@@ -129,11 +129,10 @@
     "subscriptions-transport-ws": "^0.9.19",
     "swiper": "^6.4.15",
     "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "tsc": "^1.20150623.0",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "4.4.3",
+    "typescript": "^4.4.3",
     "websocket": "^1.0.34"
   }
 }
