--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@tsconfig/node14": "^1.0.1",
+    "@types/jest": "^27.0.2",
     "@types/mdx-js__react": "^1.5.4",
     "@types/mini-css-extract-plugin": "^1.2.2",
-    "@types/node": "^14.14.31",
+    "@types/node": "^16.9.6",
     "@types/ramda": "^0.27.44",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
@@ -73,6 +74,8 @@
     "cssnano": "^5.0.8",
     "dayjs": "^1.10.7",
     "dotenv": "^8.2.0",
+    "esbuild": "^0.13.1",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.0",
@@ -104,7 +107,7 @@
     "gatsby-transformer-sharp": "^3.14.0",
     "http-server": "^0.12.3",
     "husky": "^4",
-    "jest": "^26.6.3",
+    "jest": "^27.2.1",
     "loadable-components": "^2.2.3",
     "mdx-utils": "^0.2.0",
     "modern-css-reset": "^1.4.0",
@@ -128,7 +131,7 @@
     "stylelint-scss": "^3.21.0",
     "subscriptions-transport-ws": "^0.9.19",
     "swiper": "^6.4.15",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
