--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "run-s build:feed build:gatsby",
     "build:feed": "ts-node --project ./bin/tsconfig.json -r tsconfig-paths/register ./bin/fetch-feed.ts",
     "build:gatsby": "gatsby build",
+    "prebuild": "rimraf public",
     "clean": "gatsby clean",
     "codegen": "graphql-codegen --config codegen.yml",
     "typecheck": "tsc -p . --noEmit",
@@ -120,6 +121,7 @@
     "react-helmet-async": "^1.1.2",
     "react-live": "^2.3.0",
     "react-share": "^4.4.0",
+    "rimraf": "^3.0.2",
     "rss-parser": "^3.12.0",
     "sass": "^1.42.1",
     "stylelint": "^13.13.1",
