--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": "git+https://github.com/d-kimuson/kimuson.dev.git"
   },
   "license": "0BSD",
-  "author": "Kaito Kimura <dev.kimuson@gmail.com>",
-  "main": "n/a",
+  "author": "d-kimuson <dev.kimuson@gmail.com>",
   "scripts": {
     "dev": "run-s build:feed dev:gatsby",
     "dev:gatsby": "gatsby develop -p 2828",
@@ -36,10 +35,12 @@
     "deploy": "git rev-parse --show-toplevel && git add content && git commit -m '[article] post article' && git push origin master",
     "test": "jest",
     "prepare": "husky install",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "repair:sharp": "npm rebuild --verbose sharp"
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "gatsby-plugin-feed": "^4.21.0",
     "preact": "^10.6.5",
     "preact-render-to-string": "^5.1.19",
     "ramda": "^0.28.0"
@@ -78,32 +79,31 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
-    "fibers": "^5.0.1",
-    "gatsby": "^3.14.6",
+    "gatsby": "^4.21.1",
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-fontawesome-css": "^1.1.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-manifest": "^4.21.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-next-seo": "^1.10.0",
     "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-preact": "^5.14.0",
+    "gatsby-plugin-preact": "^6.21.0",
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.3",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-typescript": "^3.14.0",
+    "gatsby-plugin-sass": "^5.21.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-sitemap": "^5.21.0",
+    "gatsby-plugin-typescript": "^4.21.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-autolink-headers": "^4.11.0",
     "gatsby-remark-copy-linked-files": "^4.11.0",
-    "gatsby-remark-images": "^5.11.0",
+    "gatsby-remark-images": "^6.21.0",
     "gatsby-remark-smartypants": "^4.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-transformer-sharp": "^4.21.0",
     "http-server": "^13.0.2",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
