--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "deploy": "git rev-parse --show-toplevel && git add content && git commit -m '[article] post article' && git push origin master",
     "test": "jest",
     "prepare": "husky install",
-    "postinstall": "patch-package && yarn repair:sharp",
+    "postinstall": "yarn repair:sharp",
     "repair:sharp": "npm rebuild --verbose sharp"
   },
   "config": {
@@ -53,10 +53,10 @@
     "ramda": "^0.28.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.4",
     "@graphql-codegen/typescript-operations": "^2.2.4",
@@ -121,7 +121,6 @@
     "mdx-utils": "^0.2.0",
     "modern-css-reset": "^1.4.0",
     "npm-run-all": "^4.1.5",
-    "patch-package": "^6.4.7",
     "postcss": "^8.4.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.5.1",
