--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "preact": "^10.6.5",
     "preact-render-to-string": "^5.1.19",
     "prism-react-renderer": "^1.3.5",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
