--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.12.0",
     "sass": "^1.68.0",
+    "sharp": "^0.32.6",
     "type-fest": "^4.3.1",
     "typescript": "^5.2.2",
     "validator": "^13.11.0"
