--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@types/jsdom": "^21.1.3",
     "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/parser": "^6.7.2",
     "astro": "^3.1.2",
     "commitizen": "^4.3.0",
     "cspell": "^7.3.6",
@@ -80,7 +80,8 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.3.0",
-    "prettier": "^2.8.8",
+    "parser@latest": "link:typescript-eslint/parser@latest",
+    "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
     "sass": "^1.68.0",
     "sharp": "^0.32.6",
