--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       {
         "name": "@astrojs/ts-plugin"
       }
-    ]
+    ],
+    "allowJs": true
   },
   "include": ["src"],
   "exclude": ["test/**", "**/*.test.ts"]
