--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "tailwindcss": "^3.3.3",
     "ts-array-length": "^0.1.2",
     "ts-pattern": "^4.3.0",
-    "valibot": "^0.17.0",
-    "zod": "^3.22.2"
+    "valibot": "^0.17.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.2.0",
