--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./custom-cz-rule.cjs"
     }
   },
   "packageManager": "pnpm@8.7.6",
