--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,9 @@ jobs:
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
 
+      - name: Create astro content files
+        run: pnpm astro sync
+
       - name: lint
         run: pnpm lint
 
